fix description size overflow textarea

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -620,7 +620,7 @@ b {
   max-width: 500px; 
   margin: 0 auto; 
   height: 100%;
-  max-height: 200px;
+  max-height: 150px;
   overflow-y: auto; 
   padding: 5px 10px;
   font-size: 14px;
